2017.01.05 ver2.8.7 - Added GALEX (Far/Near UV) and WISE (4ch) in FC.
	            - Bug fix in SIMBAD ID seach for standard and FC objects.
                          '+' => "%2b"  and  ' ' => "%20"
	            - Added SkyView RGB composite in FC.
	              Three sources can be selected in the properties window.
	            - gdk_window_invalidate_rect() for progress bar update.

2016.12.29 ver2.8.6 - Changed catalog matching criteria SIMBAD into
	              "region(box,..." style.
	            - Parameter setups for SIMBAD catalog matching.
	            - SDSS access changed DR12 -> DR13
	            - SIMBAD Catalog Matching function implemented into the GUI
	              of FC.
	            - Fixed a bug on Catalog Matching with a flipped image.

2016.12.27 ver2.8.5 - Added proper motion info for standard and finding chart
	              objects.
	            - Added OPE Def. button in finding chart object list.
	            - Added "copy to clipboard for OPE Def. button in standard
	              and finding chart object lists.
	            - These OPE Def. coordinates automatically calculate proper
	              motion of targets (for targets w/PM_RA or Dec > 50mas/yr).
	            - Added iteration at the beginning of fc_dl_draw(),
	              fcdb_dl(), and stdb_dl().
	            - Added gdk_flush() to each iteration.

2016.12.26 ver2.8.4 - small bug fix.

2016.12.26 ver2.8.3 - Added iteration at the beginning of draw_fc_cairo();

2016.12.26 ver2.8.2 - Added SIMBAD catalog matching in finding chart .
	            - Standard and Object in FC tree windows are unified
	              into the main object treeview (using tab).
	            - Refined remake_tree in object treeview.

2016.12.23 ver2.8.1 - For Standard search mode added
	                 - ESO Opt/UV standard
	                 - IRAF onedstds (spec16/50cal)
	                 - HST CALSPEC
	            - These standard list are stocked in esostd.h